Removed the 1200 therapists proof..

--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
                     <div class="hero-brand">
                         <h1 class="brivy-logo">Brivy</h1>
                     </div>
-                    <div class="social-proof">
-                        <span class="social-proof-text">1200+ active therapists</span>
-                    </div>
                     <h2 class="hero-title">CHARTING WILL NEVER BE THE SAME</h2>
                     <p class="hero-subtitle">The AI scribe built for therapists.</p>
                     <p class="hero-description">Spend less time charting and more time connecting with clients. Brivy streamlines the documentation process, generating therapy notes and treatment summaries in seconds, giving you hours back in your day.</p>
@@ -240,7 +237,7 @@
         <div class="container">
             <div class="cta-content">
                 <h2>Ready to transform your therapy documentation?</h2>
-                <p>Join 1200+ therapists who are already saving hours every week with Brivy.</p>
+                <p>Start saving hours every week with Brivy.</p>
                 <a href="https://app.brivy.io/signup" class="btn-primary btn-large">Start Your Free Trial</a>
             </div>
         </div>
